@@ -36,16 +36,7 @@ static PHB_ITEM lastTopLevelWindow;
 */
 wxh_Item::~wxh_Item()
 {
-  const char *hbClassName;
-  if( this->pSelf )
-    hbClassName = hb_clsName( this->pSelf->item.asArray.value->uiClass );
-  else
-    hbClassName = "<unknown>";
-  //const char *wxClassName = (char *) (wxString( this->wxObj->GetClassInfo()->GetClassName() ).c_str() );
-  const char *c1 = wxString( this->wxObj->GetClassInfo()->GetClassName(), wxConvISO8859_1 ).mb_str();
-  char text[ 50 ] ;
-  strcpy( text, c1 );
-  qoutf("~wxh_Item = hb: %s, wx: %s", hbClassName, text );
+  qoutf("~wxh_Item = hb: %s", hb_clsName( this->uiClass ) );
 
   map_phbBaseArr.erase( this->objHandle );
   map_wxObject.erase( this->wxObj  );
@@ -67,13 +58,14 @@ wxh_Item::~wxh_Item()
 
   if( delete_WX )
   {
-    qoutf("deleting wx...");
+    qoutf("  deleting wx...");
     delete this->wxObj;
   }
 
   if( pSelf )
   {
-    qoutf("releasing item...");
+    qoutf("  releasing item...");
+    hb_objSendMsg( pSelf, "ClearObjData", 0 );
     hb_itemRelease( pSelf );
     pSelf = NULL;
   }
@@ -85,6 +77,7 @@ wxh_Item::~wxh_Item()
 */
 wxh_ObjParams::wxh_ObjParams()
 {
+  pParent = NULL;
   pSelf = hb_stackSelfItem();
   pWxh_Item = wxh_ItemListGet_PWXH_ITEM( pSelf );
 }
@@ -95,7 +88,8 @@ wxh_ObjParams::wxh_ObjParams()
 */
 wxh_ObjParams::wxh_ObjParams( PHB_ITEM pHbObj )
 {
-  pSelf = pHbObj ;
+  pParent = NULL;
+  pSelf = pHbObj;
   pWxh_Item = wxh_ItemListGet_PWXH_ITEM( pSelf );
 }
 
@@ -163,7 +157,10 @@ wxObject* wxh_ObjParams::paramParent( const int param )
 
     if( wxObj )
     {
-      map_paramListParent[ pParentItm ] = wxObj;
+      if( this->pParent == NULL )
+	this->pParent = pParentItm;
+      else
+	hb_errRT_BASE_SubstR( EG_ARG, WXH_ERRBASE + 3, NULL, HB_ERR_FUNCNAME, HB_ERR_ARGS_BASEPARAMS );
     }
   }
 
@@ -176,13 +173,9 @@ wxObject* wxh_ObjParams::paramParent( const int param )
 */
 void wxh_ObjParams::ProcessParamLists()
 {
-  /* add the Parent objects to the child/parent lists */
-  while( map_paramListParent.size() > 0 )
-  {
-    MAP_PHB_ITEM::iterator it = map_paramListParent.begin();
+  /* add the Parent object (if any) to the child/parent lists */
+  if( pParent )
     SetChildItem( pSelf );
-    map_paramListParent.erase( it );
-  }
 
   /* add the Child objects to the child/parent lists */
 #if 1
@@ -214,6 +207,7 @@ void wxh_ObjParams::Return( wxObject* wxObj, bool bItemRelease )
 
     pWxh_Item = new wxh_Item;
     pWxh_Item->wxObj = wxObj;
+    pWxh_Item->uiClass = pSelf->item.asArray.value->uiClass;
     pWxh_Item->objHandle = pSelf->item.asArray.value;
 
     map_phbBaseArr[ pSelf->item.asArray.value ] = pWxh_Item;
